# psycopg-pool-backport

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: lint.yml  packages-pool.yml  tests.yml
psycopg2_pool/: __init__.py  _compat.py  base.py  errors.py  null_pool.py  pool.py  sched.py
tests/: README.rst  conftest.py  constraints.txt  fix_crdb.py  fix_db.py  fix_proxy.py  utils.py
tests/pool/: fix_pool.py  test_null_pool.py  test_pool.py  test_sched.py
