[metadata]
name = psycopg-pool-backport
description = Connection Pool for Psycopg - Psycopg2 backport
url = https://github.com/bluetech/psycopg-pool-backport
author = Daniele Varrazzo
author_email = daniele.varrazzo@gmail.com
license = GNU Lesser General Public License v3 (LGPLv3)

project_urls =
    Homepage = https://github.com/bluetech/psycopg-pool-backport
    Code = https://github.com/bluetech/psycopg-pool-backport
    Issue Tracker = https://github.com/bluetech/psycopg-pool-backport/issues
    Download = https://pypi.org/project/psycopg-pool-backport/

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Database
    Topic :: Database :: Front-Ends
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules

long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt

[options]
python_requires = >= 3.7
packages = find:
zip_safe = False
install_requires =
    psycopg2 >= 2.9

[options.extras_require]
# Requirements needed for development
test = mypy >= 0.981; types-psycopg2 >= 2.9.21.1; pproxy >= 2.7; pytest >= 6.2.5; pytest-cov >= 3.0; pytest-randomly >= 3.10
# Requirements needed for development
dev = black >= 22.3.0; flake8 >= 4.0; mypy >= 0.981; types-setuptools >= 57.4

[options.package_data]
psycopg2_pool = py.typed
